GMM_Main/src/objects/MSY_Values__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Long_Description_Text__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Short_Description_Text__c</fullName>
        <label>MSY Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Specific_Text__c</fullName>
        <label>MSY Multiplier Percentage</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <label>MSY Values</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code_Short_Description_Text__c</columns>
        <columns>Table_Specific_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>MSY Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSY Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Name_Unique</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS(LOWER(VLOOKUP( $ObjectType.MSY_Values__c.Fields.Name , $ObjectType.MSY_Values__c.Fields.Name, Name)),LOWER (Name)), OR(ISNEW(), ISCHANGED(Name)) )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The MSY Code already exists. This value must be unique.</errorMessage>
    </validationRules>
</CustomObject>